--- a/ma_bikaneri_bakery_single.html
+++ b/ma_bikaneri_bakery_single.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>मां बीकानेरी रसगुल्ला तमकीन बेकरी - Complete Prototype</title>
+<title>मां बीकानेरी </title>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;500;600;700&display=swap" rel="stylesheet" />
 <style>
   body { font-family: 'Noto Sans Devanagari', sans-serif; background: linear-gradient(135deg, #FFE4E1 0%, #FFF8DC 100%); margin: 0; }
