--- a/ma_bikaneri_bakery_single.html
+++ b/ma_bikaneri_bakery_single.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>मां बीकानेरी </title>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;500;600;700&display=swap" rel="stylesheet" />
-<style>
+<link rel="stylesheet" href="style.css">
+<!-- <style>
   body { font-family: 'Noto Sans Devanagari', sans-serif; background: linear-gradient(135deg, #FFE4E1 0%, #FFF8DC 100%); margin: 0; }
   .container { max-width: 900px; margin: auto; padding: 10px; }
   .header { background: linear-gradient(45deg, #DC143C, #FF6347, #FFD700); color: white; padding: 20px; text-align: center; border-radius: 15px; margin-bottom: 20px; box-shadow: 0 8px 25px rgba(220, 20, 60, 0.3); }
@@ -26,15 +27,15 @@
   .order-btn:hover { background: #20B858; transform: scale(1.05); }
   .floating-whatsapp { position: fixed; bottom: 20px; right: 20px; background: #25D366; color: white; border-radius: 50px; padding: 15px 20px; text-decoration: none; box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4); z-index: 1000; animation: pulse 2s infinite; }
   @keyframes pulse { 0% { box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4); } 50% { box-shadow: 0 4px 30px rgba(37, 211, 102, 0.8); } 100% { box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4); } }
-</style>
+</style> -->
 </head>
 <body>
 <div class="container">
   <div class="header">
-    <h1>मां बीकानेरी रसगुल्ला तमकीन बेकरी</h1>
-    <div class="tagline">आपके मुंह का स्वाद है, फूल जैसा सेवा का फूल जो।</div>
+    <h1>मां बीकानेरी बेकरी</h1>
+    <div class="tagline">स्वाद वो जो आपका मन चाहे </div>
     <div class="contact-info">
-      <div class="address">पता - रेजगांहर चौक, रायपुर (छ.ग.)</div>
+      <div class="address">पता - सेज़बहार चौक, रायपुर (छ.ग.)</div>
       <div class="phones">मो.- 6375883921, 9983848288</div>
     </div>
   </div>
